--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 regex = "1"
 rayon = "1.5"
+reqwest = { version = "0.11.24", features = ["blocking"] }
+scraper = "0.18.1"
+tokio = { version = "1.36.0", features = ["full"] }
